Add Activity List
next step is to style it and add button

--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,21 @@ abbr[title] {
   justify-content:center;
   align-items:baseline;
 }
+
+/* Activity List */
+.activity {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.activity:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.activity h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
+.activity a{
+  text-decoration: none;
+}
