--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 .react-calendar {
-  width: 350px;
+  width: 500px;
+  height:300px;
   max-width: 100%;
   background: white;
   border: 1px solid #a0a096;
@@ -8,6 +9,7 @@
 }
 .react-calendar--doubleView {
   width: 700px;
+  height: 500px
 }
 .react-calendar--doubleView .react-calendar__viewContainer {
   display: flex;
